--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           I spent time this weekend with Madi, Megan, Kara, Tegan - all former <span class="more" id="more-emmanuel">Emmanuel</span> students who left almost ten <span class="more" id="more-years">years</span> ago. You <span class="more" id="more-taught">taught</span> three of us. We all talked about our <span class="more" id="more-impressions">impressions</span> now of our time at school and how people had grown up.
         </p>
         <p class="hidden" id="reveal-years">
-          I'm 25 now, turning 26 in a month. I remember you were born in 1979 because that Smashing Pumpkins song had particular significance to you. You would have been 27 when I finished high school, maybe 23 when you first started teaching there. You must be 35 or 36 now. I'm <span class="more" id="more-friends">friends</span> with people your age now, and people who remind me of you in a lot of ways<span class="hidden" id="reveal-friends">, but I can't imagine a social situation with them that would be accepting of someone who bought so wholesale into such a fundamentally bigoted institution as Emmanuel College</span>. 
+          I'm 25 now, turning 26 in a couple of months. I remember you were born in 1979 because that Smashing Pumpkins song had particular significance to you. You would have been 27 when I finished high school, maybe 23 when you first started teaching there. You must be 35 or 36 now. I'm <span class="more" id="more-friends">friends</span> with people your age now, and people who remind me of you in a lot of ways<span class="hidden" id="reveal-friends">, but I can't imagine a social situation with them that would be accepting of someone who bought so wholesale into such a fundamentally bigoted institution as Emmanuel College</span>. 
         </p>
         <p class="hidden" id="reveal-taught">
           I remember our first classes where you tried to explain capitalism with top hats on the whiteboard. I liked you because you were strange and uncertain and you listened wide-eyed and spoke animatedly. It felt like you were all there to be accessed, sincere and vulnerable, and you really wanted to make this shitty and incomprehensible world a little better and more understandable for some people.
@@ -94,7 +94,7 @@
         </div> <!-- Queer -->
       </div> <!-- Queensland -->
       <p class="hidden" id="reveal-phone">
-        I wanted to talk to you. You are deeply principled and intelligent and I have great respect for you. I always liked talking to you, about psychoanalysis or Marxism or books or whatever else, and I wondered if you'd still be wide-eyed and animated and thoughtful. You shaped me in a lot of ways<span id="more-b" class="more">.</span> <span id="reveal-b" class="hidden">I wanted to see if Breccan really looks like you.</span>
+        I wanted to talk to you. You are deeply principled and intelligent and I have great respect for you. I always liked talking to you, about psychoanalysis or Marxism or books or whatever else, and I wondered if you'd still be wide-eyed and animated and thoughtful. You shaped me in a lot of ways.
       </p>
       <div id="reveal-stephens" class="hidden">
         <p>
