--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Merrin Macleod is good at things">
   <link rel="stylesheet" type="text/css" href="inconsolata/stylesheet.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="/jquery/js/jquery-1.9.1.js"></script>
+  <script src="jquery/js/jquery-1.9.1.js"></script>
   <script src="application.js"></script>
 </head>
 
