--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <em>(The following Lifestyle Clause is an extract of the Emmanuel College Collective Workplace
               Agreement as agreed to by the Queensland Independent Education Union)</em>
               <ol>
-                <li>Emmanuel College bases its doctrines and tenets on the Bible, both Old and New Testaments,
+                <li class="mobile-invisible">Emmanuel College bases its doctrines and tenets on the Bible, both Old and New Testaments,
                 which the School regards as the inspired and inerrant Word of God.    These doctrines and
                 tenets are expounded in many of Emmanuel College’s public and internal documents, both
                 printed and on the school’s website, and viewable by staff as part of their appointment
@@ -75,7 +75,7 @@
                 work in this school are required (subject to the provisions of relevant State and
                 Commonwealth discrimination laws) to respect and maintain at all times, and should be
                 understood as source documents, defining our doctrines, tenets, beliefs or teachings.</li>
-                <li>All staff of Emmanuel College, regardless of their role, are required to be seen to conduct
+                <li class="mobile-invisible">All staff of Emmanuel College, regardless of their role, are required to be seen to conduct
                 themselves in the course of, or in connection with their work, in a manner consistent with
                 these principles and beliefs and in accordance with the Christian ethics of the School, as
                 contained and interpreted in these documents, thus providing a specifically Christian role
@@ -87,7 +87,7 @@
                 incompatible with the intrinsic character of their position, especially, but not only, in relation
                 to the expression of human sexuality through heterosexual, monogamous relationships,
                 expressed intimately through marriage.</strong></li>
-                <li>Staff are required to regularly and frequently attend a Christian church and to regularly and
+                <li class="mobile-invisible">Staff are required to regularly and frequently attend a Christian church and to regularly and
                 frequently support Staff Devotions and Staff Worship Services.</li>
                 <li>Where any staff member acts contrary to these lifestyle requirements, the Principal may
               attempt restoration, counsel, discipline and dismiss the employee.</li>
