--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="reveal-hi" class="hidden marked">
       <span class="marker"></span>
       <p>
-        I'm writing you this letter because I <span id="more-just" class="more">just</span> got back to Sydney from <span id="more-queensland" class="more">Queensland</span>. I only just got in touch with you to try to meet up this afternoon, and I never replied to your polite decline. I'm sure you really were at school until 6pm. <span id="more-stephens" class="more">I went past you around four</span> and thought about texting then but didn't end up pressing send.
+        I'm writing you this letter because I <span id="more-just" class="more">just</span> got back to Sydney from <span id="more-queensland" class="more">Queensland</span>. I only just got in touch with you to try to meet up this afternoon, and I never replied to your polite decline. I'm sure you really were at school until 6pm. <span id="more-stephens" class="more">I went past your school around four</span> and thought about texting then but didn't end up pressing send.
       </p> 
       <p class="hidden" id="reveal-just">
         The clock says 11.10pm for me now and it'd be rude to text past your midnight. I heard you have a baby now.
